// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Textarea Standard smoke-test 1`] = `
<div class="nhsuk-form-group">
  <label class="nhsuk-label"
         id="more-detail--label"
         for="more-detail"
  >
    Can you provide more detail?
  </label>
  <div class="nhsuk-hint"
       id="more-detail--hint"
  >
    Don't include personal or financial information, eg your National Insurance number or credit card details.
  </div>
  <textarea class="nhsuk-textarea"
            aria-describedby="more-detail--hint"
            aria-labelledby="more-detail--label"
            name="more-detail"
            id="more-detail"
            rows="5"
  >
  </textarea>
</div>
`;

exports[`Components/Textarea TextareaWithAutoCompleteAttribute smoke-test 1`] = `
<div class="nhsuk-form-group">
  <label class="nhsuk-label"
         id="textarea-with-autocomplete-attribute--label"
         for="textarea-with-autocomplete-attribute"
  >
    Full address
  </label>
  <div class="nhsuk-hint"
       id="textarea-with-autocomplete-attribute--hint"
  >
    Don't include personal or financial information, eg your National Insurance number or credit card details.
  </div>
  <textarea class="nhsuk-textarea"
            aria-describedby="textarea-with-autocomplete-attribute--hint"
            aria-labelledby="textarea-with-autocomplete-attribute--label"
            name="more-detail"
            id="textarea-with-autocomplete-attribute"
            rows="5"
            autocomplete="street-address"
  >
  </textarea>
</div>
`;

exports[`Components/Textarea TextareaWithErrorBoolean smoke-test 1`] = `
<div class="nhsuk-form-group nhsuk-form-group--error">
  <label class="nhsuk-label"
         id="no-ni-reason--label"
         for="no-ni-reason"
  >
    Why can't you provide a National Insurance number?
  </label>
  <textarea class="nhsuk-textarea nhsuk-textarea--error"
            aria-labelledby="no-ni-reason--label"
            name="no-ni-reason"
            id="no-ni-reason"
            rows="5"
  >
  </textarea>
</div>
<button class="nhsuk-button"
        aria-disabled="false"
        type="submit"
>
  Toggle Error
</button>
`;

exports[`Components/Textarea TextareaWithErrorString smoke-test 1`] = `
<div class="nhsuk-form-group nhsuk-form-group--error">
  <label class="nhsuk-label"
         id="no-ni-reason--label"
         for="no-ni-reason"
  >
    Why can't you provide a National Insurance number?
  </label>
  <span class="nhsuk-error-message"
        id="no-ni-reason--error-message"
        role="alert"
  >
    <span class="nhsuk-u-visually-hidden">
      Error:
    </span>
    You must provide an explanation
  </span>
  <textarea class="nhsuk-textarea nhsuk-textarea--error"
            aria-labelledby="no-ni-reason--label"
            name="no-ni-reason"
            id="no-ni-reason"
            rows="5"
  >
  </textarea>
</div>
<div class="nhsuk-form-group">
  <input class="nhsuk-input"
         name="input_4j6yz"
         id="input_4j6yz"
         type="text"
         value="You must provide an explanation"
  >
</div>
`;
